--- a/index.html
+++ b/index.html
@@ -129,33 +129,42 @@
 				<!-- CTA -->
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
+							<header>
+								<h2>Rejoignez-nous !</h2>
+								<p>Soyez le premier au courant des dernières nouvelles de la communauté</p>
+							</header>
 
-							<!-- Begin MailChimp Signup Form -->
-							<link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
-							<style type="text/css">
-								#mc_embed_signup{ clear:left; font:14px Helvetica,Arial,sans-serif; width: 100% }
-								/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-								   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-							</style>
-							<div id="mc_embed_signup">
-							<form action="http://swlille.us10.list-manage.com/subscribe/post?u=bc4f7f74c8228f5b23b6f3d0c&amp;id=5ccd87db3b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-							    <div id="mc_embed_signup_scroll">
-								
-							<div class="mc-field-group">
-								<label for="mce-EMAIL">Email Address </label>
-								<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-							</div>
-								<div id="mce-responses" class="clear">
-									<div class="response" id="mce-error-response" style="display:none"></div>
-									<div class="response" id="mce-success-response" style="display:none"></div>
-								</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-							    <div style="position: absolute; left: -5000px;"><input type="text" name="b_bc4f7f74c8228f5b23b6f3d0c_5ccd87db3b" tabindex="-1" value=""></div>
-							    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button" style="margin-top: 15px;"></div>
-							    </div>
-							</form>
-							</div>
-							<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-							<!--End mc_embed_signup-->
+							<ul class="actions vertical">
+								<li>
+									<!-- Begin MailChimp Signup Form -->
+									<link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
+									<style type="text/css">
+										#mc_embed_signup{ clear:left; font:14px Helvetica,Arial,sans-serif; width: 100% }
+										/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+										   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+									</style>
+									<div id="mc_embed_signup">
+									<form action="http://swlille.us10.list-manage.com/subscribe/post?u=bc4f7f74c8228f5b23b6f3d0c&amp;id=5ccd87db3b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+									    <div id="mc_embed_signup_scroll">
+										
+									<div class="mc-field-group">
+										<label for="mce-EMAIL">Email Address </label>
+										<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+									</div>
+										<div id="mce-responses" class="clear">
+											<div class="response" id="mce-error-response" style="display:none"></div>
+											<div class="response" id="mce-success-response" style="display:none"></div>
+										</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+									    <div style="position: absolute; left: -5000px;"><input type="text" name="b_bc4f7f74c8228f5b23b6f3d0c_5ccd87db3b" tabindex="-1" value=""></div>
+									    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button" style="margin-top: 15px;"></div>
+									    </div>
+									</form>
+									</div>
+									<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+									<!--End mc_embed_signup-->
+								</li>
+
+							</ul>
 						</div>
 					</section>
 
@@ -178,7 +187,7 @@
 			<script src="js/jquery.scrolly.min.js"></script>
 			<script src="js/skel.min.js"></script>
 			<script src="js/init.js"></script>
-
+			
 
 		</div>
 	</body>
