--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="https://twitter.com/SWLilleMakers" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://twitter.com/SWLille" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="mailto:hello@swlille.fr" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
