--- a/index.html
+++ b/index.html
@@ -9,12 +9,25 @@
 		<title>Startup Weekend Lille [CoreTeam]</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="Startup Weekend Lille, nous sommes là pour vous aider." />
+		<meta name="keywords" content="startup,weekend,lille,entrepreneurs,swlille" />
+		<meta property="og:locale" content="fr_FR" />
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="Startup Weekend Lille [CoreTeam]" />
+		<meta property="og:description" content="Startup Weekend Lille, nous sommes là pour vous aider." />
+		<meta property="og:url" content="http://swlille.fr" />
+		<meta property="og:site_name" content="Startup Weekend Lille" />
+		<meta property="og:image" content="http://swlille.fr/images/banner.jpg" />
+		<meta name="twitter:card" content="summary_large_image"/>
+		<meta name="twitter:description" content="Startup Weekend Lille [CoreTeam]"/>
+		<meta name="twitter:title" content="Startup Weekend Lille, nous sommes là pour vous aider."/>
+		<meta name="twitter:site" content="@swlille"/>
+		<meta name="twitter:domain" content="SWLILLE"/>
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="css/style.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+		<link rel="icon" type="image/png" href="./images/cat.png" />
 	</head>
 	<body class="landing">
 		<!-- Page Wrapper -->
@@ -142,11 +155,12 @@
 										#mc_embed_signup{ clear:left; font:14px Helvetica,Arial,sans-serif; width: 100% }
 										/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
 										   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+											#mc_embed_signup { color:#fff; }
 									</style>
 									<div id="mc_embed_signup">
 									<form action="http://swlille.us10.list-manage.com/subscribe/post?u=bc4f7f74c8228f5b23b6f3d0c&amp;id=5ccd87db3b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 									    <div id="mc_embed_signup_scroll">
-										
+
 									<div class="mc-field-group">
 										<label for="mce-EMAIL">Email Address </label>
 										<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
@@ -187,8 +201,17 @@
 			<script src="js/jquery.scrolly.min.js"></script>
 			<script src="js/skel.min.js"></script>
 			<script src="js/init.js"></script>
-			
+			<script src="js/init.js"></script>
+			<script>
+			  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+			  ga('create', 'UA-61946495-1', 'auto');
+			  ga('send', 'pageview');
+
+			</script>
 		</div>
 	</body>
 </html>
