Avoid frustrated users on mobile devices and diet for images

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
 									<div class="mc-field-group">
 										<label for="mce-EMAIL">Email Address </label>
-										<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+										<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
 									</div>
 										<div id="mce-responses" class="clear">
 											<div class="response" id="mce-error-response" style="display:none"></div>
