--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 								</li>
 								<li class="icon fa-globe">
 									<h3>We guide you</h3>
-									<p>Dans ce parcours, son plus grand ennemi est la solitude. Dans ce parcours, son plus grand allié et sa communauté.</p>
+									<p>Dans ce parcours, son plus grand ennemi est la solitude. Dans ce parcours, son plus grand allié est sa communauté.</p>
 								</li>
 								<li class="icon fa-plane">
 									<h3>We believe in you</h3>
